include/Urban.h

// Opaque handle type (pointer to private struct)
typedef struct _p_UrbanType *UrbanType;
// Error codes for API calls
typedef enum {
  URBAN_SUCCESS = 0,
  URBAN_ERR_INVALID_ARGUMENT = 1,
  URBAN_ERR_NOT_INITIALIZED = 2,
  URBAN_ERR_INTERNAL = 3,
  URBAN_ERR_SIZE_MISMATCH = 4
} UrbanErrorCode;
// API functions
URBAN_EXTERN void UrbanCreate(int numLandunits, UrbanType *urban,
                              UrbanErrorCode *status);
URBAN_EXTERN void UrbanDestroy(UrbanType *urban, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetCanyonHwr(UrbanType urban, const double *values,
                                    int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetFracPervRoadOfTotalRoad(UrbanType urban,
                                                  const double *values,
                                                  int length,
                                                  UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetWtRoof(UrbanType urban, const double *values,
                                 int length, UrbanErrorCode *status);
// Albedo setter functions
URBAN_EXTERN void UrbanSetAlbedoPerviousRoad(UrbanType urban,
                                             const double *values,
                                             const int size[3],
                                             UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAlbedoImperviousRoad(UrbanType urban,
                                               const double *values,
                                               const int size[3],
                                               UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAlbedoSunlitWall(UrbanType urban,
                                           const double *values,
                                           const int size[3],
                                           UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAlbedoShadedWall(UrbanType urban,
                                           const double *values,
                                           const int size[3],
                                           UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmRain(UrbanType urban, const double *values,
                                  int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmSnow(UrbanType urban, const double *values,
                                  int length, UrbanErrorCode *status);
// DewCondensation setter functions (roof and impervious road inputs)
URBAN_EXTERN void UrbanSetQflxDewGrndRoof(UrbanType urban, const double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetQflxDewSnowRoof(UrbanType urban, const double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetQflxSubSnowRoof(UrbanType urban, const double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetQflxDewGrndImperviousRoad(UrbanType urban,
                                                    const double *values,
                                                    int length,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetQflxDewSnowImperviousRoad(UrbanType urban,
                                                    const double *values,
                                                    int length,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetQflxSubSnowImperviousRoad(UrbanType urban,
                                                    const double *values,
                                                    int length,
                                                    UrbanErrorCode *status);
// DewCondensation compute function
URBAN_EXTERN void
UrbanComputeDewCondensationRoofImperviousRoad(UrbanType urban, double dtime,
                                              UrbanErrorCode *status);
// DewCondensation getter functions (TopH2OSoiIce for roof and impervious road)
URBAN_EXTERN void UrbanGetTopH2OSoiIceRoof(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetTopH2OSoiIceImperviousRoad(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);
// WaterTable getter functions (1D)
URBAN_EXTERN void UrbanGetWaterTableDepthPerviousRoad(UrbanType urban,
                                                      double *values,
                                                      int length,
                                                      UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetAquiferWaterPerviousRoad(UrbanType urban,
                                                   double *values, int length,
                                                   UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetZwtPerchedPerviousRoad(UrbanType urban,
                                                 double *values, int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetSubSnowFluxPerviousRoad(UrbanType urban,
                                                  double *values, int length,
                                                  UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetDrainFluxPerviousRoad(UrbanType urban, double *values,
                                                int length,
                                                UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetRsubSatPerviousRoad(UrbanType urban, double *values,
                                              int length,
                                              UrbanErrorCode *status);
// WaterTable getter functions (2D)
URBAN_EXTERN void UrbanGetSoilIceContentPerviousRoad(UrbanType urban,
                                                     double *values,
                                                     const int size[2],
                                                     UrbanErrorCode *status);
// ============================================================================
// Drainage init-time constant setters
// ============================================================================
URBAN_EXTERN void UrbanSetRsubTopGlobalMax(UrbanType urban, double value,
                                           UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetPondmax(UrbanType urban, double value,
                                  UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetWatmin(UrbanType urban, double value,
                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetEice(UrbanType urban, double value,
                               UrbanErrorCode *status);
// Drainage timestep setter functions (pervious road inputs)
URBAN_EXTERN void UrbanSetHkDepthForPerviousRoad(UrbanType urban,
                                                 const double *values,
                                                 int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetTopoSlopeForPerviousRoad(UrbanType urban,
                                                   const double *values,
                                                   int length,
                                                   UrbanErrorCode *status);
// Drainage compute function
URBAN_EXTERN void UrbanComputeDrainage(UrbanType urban, double dtime,
                                       UrbanErrorCode *status);