include/urban_mod.F90


    ! WaterTable getter C interfaces (1D)
    subroutine UrbanGetWaterTableDepthPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetWaterTableDepthPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetWaterTableDepthPerviousRoad_C

    subroutine UrbanGetAquiferWaterPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetAquiferWaterPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetAquiferWaterPerviousRoad_C

    subroutine UrbanGetZwtPerchedPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetZwtPerchedPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetZwtPerchedPerviousRoad_C

    subroutine UrbanGetSubSnowFluxPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetSubSnowFluxPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetSubSnowFluxPerviousRoad_C

    subroutine UrbanGetDrainFluxPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetDrainFluxPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetDrainFluxPerviousRoad_C

    subroutine UrbanGetRsubSatPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetRsubSatPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetRsubSatPerviousRoad_C

    ! WaterTable getter C interfaces (2D)
    subroutine UrbanGetSoilIceContentPerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetSoilIceContentPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanGetSoilIceContentPerviousRoad_C

    ! DewCondensation setter C interfaces (roof)
    subroutine UrbanSetQflxDewGrndRoof_C(urban, values, length, status) &
      bind(C, name="UrbanSetQflxDewGrndRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetQflxDewGrndRoof_C

    subroutine UrbanSetQflxDewSnowRoof_C(urban, values, length, status) &
      bind(C, name="UrbanSetQflxDewSnowRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetQflxDewSnowRoof_C

    subroutine UrbanSetQflxSubSnowRoof_C(urban, values, length, status) &
      bind(C, name="UrbanSetQflxSubSnowRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetQflxSubSnowRoof_C

    ! DewCondensation setter C interfaces (impervious road)
    subroutine UrbanSetQflxDewGrndImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetQflxDewGrndImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetQflxDewGrndImperviousRoad_C

    subroutine UrbanSetQflxDewSnowImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetQflxDewSnowImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetQflxDewSnowImperviousRoad_C

    subroutine UrbanSetQflxSubSnowImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetQflxSubSnowImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetQflxSubSnowImperviousRoad_C

    ! DewCondensation compute C interface
    subroutine UrbanComputeDewCondensationRoofImperviousRoad_C(urban, dtime, status) &
      bind(C, name="UrbanComputeDewCondensationRoofImperviousRoad")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: dtime
      integer(c_int) :: status
    end subroutine UrbanComputeDewCondensationRoofImperviousRoad_C

    ! DewCondensation getter C interfaces (TopH2OSoiIce for roof and impervious road)
    subroutine UrbanGetTopH2OSoiIceRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetTopH2OSoiIceRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetTopH2OSoiIceRoof_C

    subroutine UrbanGetTopH2OSoiIceImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetTopH2OSoiIceImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetTopH2OSoiIceImperviousRoad_C

    ! Drainage init-time constant setter C interfaces
    subroutine UrbanSetRsubTopGlobalMax_C(urban, value, status) &
      bind(C, name="UrbanSetRsubTopGlobalMax")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: value
      integer(c_int) :: status
    end subroutine UrbanSetRsubTopGlobalMax_C

    subroutine UrbanSetPondmax_C(urban, value, status) &
      bind(C, name="UrbanSetPondmax")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: value
      integer(c_int) :: status
    end subroutine UrbanSetPondmax_C

    subroutine UrbanSetWatmin_C(urban, value, status) &
      bind(C, name="UrbanSetWatmin")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: value
      integer(c_int) :: status
    end subroutine UrbanSetWatmin_C

    subroutine UrbanSetEice_C(urban, value, status) &
      bind(C, name="UrbanSetEice")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: value
      integer(c_int) :: status
    end subroutine UrbanSetEice_C

    ! Drainage timestep setter C interfaces
    subroutine UrbanSetHkDepthForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetHkDepthForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetHkDepthForPerviousRoad_C

    subroutine UrbanSetTopoSlopeForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetTopoSlopeForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetTopoSlopeForPerviousRoad_C

    ! Drainage compute C interface
    subroutine UrbanComputeDrainage_C(urban, dtime, status) &
      bind(C, name="UrbanComputeDrainage")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: dtime
      integer(c_int) :: status
    end subroutine UrbanComputeDrainage_C

  end interface

  contains

  subroutine UrbanSetAtmRain(urban, values, length, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), value :: length
    integer(c_int), intent(out) :: status
    call UrbanSetAtmRain_C(urban%ptr, values, length, status)
  end subroutine UrbanSetAtmRain

  subroutine UrbanSetAtmSnow(urban, values, length, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), value :: length
    integer(c_int), intent(out) :: status
    call UrbanSetAtmSnow_C(urban%ptr, values, length, status)
  end subroutine UrbanSetAtmSnow

  ! High-level wrapper subroutines that accept UrbanType

  subroutine UrbanCreate(numLandunits, urban, status)
    integer(c_int), intent(in) :: numLandunits
    type(UrbanType), intent(inout) :: urban
    integer(c_int), intent(out) :: status
    call UrbanCreate_C(numLandunits, urban%ptr, status)
  end subroutine UrbanCreate

  subroutine UrbanDestroy(urban, status)
    type(UrbanType), intent(inout) :: urban
    integer(c_int), intent(out) :: status
    call UrbanDestroy_C(urban%ptr, status)
  end subroutine UrbanDestroy

  subroutine UrbanSetCanyonHwr(urban, values, length, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), value :: length
    integer(c_int), intent(out) :: status
    call UrbanSetCanyonHwr_C(urban%ptr, values, length, status)
  end subroutine UrbanSetCanyonHwr

  subroutine UrbanSetFracPervRoadOfTotalRoad(urban, values, length, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), value :: length
    integer(c_int), intent(out) :: status
    call UrbanSetFracPervRoadOfTotalRoad_C(urban%ptr, values, length, status)
  end subroutine UrbanSetFracPervRoadOfTotalRoad

  subroutine UrbanSetWtRoof(urban, values, length, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), value :: length
    integer(c_int), intent(out) :: status
    call UrbanSetWtRoof_C(urban%ptr, values, length, status)
  end subroutine UrbanSetWtRoof

  subroutine UrbanSetAlbedoPerviousRoad(urban, values, size, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), dimension(3), intent(in) :: size
    integer(c_int), intent(out) :: status
    call UrbanSetAlbedoPerviousRoad_C(urban%ptr, values, size, status)
  end subroutine UrbanSetAlbedoPerviousRoad

  subroutine UrbanSetAlbedoImperviousRoad(urban, values, size, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), dimension(3), intent(in) :: size
    integer(c_int), intent(out) :: status
    call UrbanSetAlbedoImperviousRoad_C(urban%ptr, values, size, status)
  end subroutine UrbanSetAlbedoImperviousRoad

  subroutine UrbanSetAlbedoSunlitWall(urban, values, size, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), dimension(3), intent(in) :: size
    integer(c_int), intent(out) :: status
    call UrbanSetAlbedoSunlitWall_C(urban%ptr, values, size, status)
  end subroutine UrbanSetAlbedoSunlitWall

  subroutine UrbanSetAlbedoShadedWall(urban, values, size, status)
    type(UrbanType), intent(in) :: urban
    type(c_ptr), value :: values
    integer(c_int), dimension(3), intent(in) :: size
    integer(c_int), intent(out) :: status
    call UrbanSetAlbedoShadedWall_C(urban%ptr, values, size, status)
  end subroutine UrbanSetAlbedoShadedWall
